connection: Move auth helpers to own file

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -12,6 +12,7 @@ src/virtManager/clone.py
 src/virtManager/config.py
 src/virtManager/connect.py
 src/virtManager/connection.py
+src/virtManager/connectauth.py
 src/virtManager/console.py
 src/virtManager/create.py
 src/virtManager/createinterface.py
