--- a/src/virt-manager.schemas.in
+++ b/src/virt-manager.schemas.in
@@ -209,6 +209,19 @@
     </schema>
 
     <schema>
+      <key>/schemas/apps/::PACKAGE::/new-vm/storage-format</key>
+      <applyto>/apps/::PACKAGE::/new-vm/storage-format</applyto>
+      <owner>::PACKAGE::</owner>
+      <type>string</type>
+      <default>default</default>
+
+      <locale name="C">
+        <short>Use selected format for new VM storage</short>
+        <long>Use selected format when creating new disk images in new VM wizard</long>
+      </locale>
+    </schema>
+
+    <schema>
       <key>/schemas/apps/::PACKAGE::/system-tray</key>
       <applyto>/apps/::PACKAGE::/system-tray</applyto>
       <owner>::PACKAGE::</owner>
