--- a/src/virt-manager.py.in
+++ b/src/virt-manager.py.in
@@ -110,9 +110,12 @@ def parse_commandline():
     optParser = optparse.OptionParser(version=appversion,
                                       usage="virt-manager [options]")
 
-    optParser.add_option("--profile", dest="profile",
-        help="Generate runtime performance profile stats", metavar="FILE")
     optParser.set_defaults(uuid=None)
+
+    # Generate runtime performance profile stats with hotshot
+    optParser.add_option("--profile", dest="profile",
+        help=optparse.SUPPRESS_HELP, metavar="FILE")
+
     optParser.add_option("-c", "--connect", dest="uri",
         help="Connect to hypervisor at URI", metavar="URI")
     optParser.add_option("--debug", action="store_true", dest="debug",
@@ -125,19 +128,21 @@ def parse_commandline():
     optParser.add_option("--no-conn-autostart", action="store_true",
                          dest="no_conn_auto",
                          help="Do not autostart connections")
+
     optParser.add_option("--show-domain-creator", action="callback",
-        callback=opt_show_cb, dest="show", help="Create a new virtual machine")
+        callback=opt_show_cb, dest="show",
+        help="Show 'New VM' wizard")
     optParser.add_option("--show-domain-editor", type="string",
         metavar="UUID", action="callback", callback=opt_show_cb,
-        help="Edit a domain configuration")
+        help="Show domain details window")
     optParser.add_option("--show-domain-performance", type="string",
         metavar="UUID", action="callback", callback=opt_show_cb,
-        help="Show a domain performance")
+        help="Show domain performance window")
     optParser.add_option("--show-domain-console", type="string",
         metavar="UUID", action="callback", callback=opt_show_cb,
-        help="Show a domain console")
+        help="Show domain graphical console window")
     optParser.add_option("--show-host-summary", action="callback",
-       callback=opt_show_cb, help="Show a host summary")
+       callback=opt_show_cb, help="Show connection details window")
 
     return optParser.parse_args()
 
