--- a/virt-manager.spec.in
+++ b/virt-manager.spec.in
@@ -72,8 +72,10 @@ Source0: http://virt-manager.org/download/sources/%{name}/%{name}-%{version}.tar
 BuildRoot: %{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
 BuildArch: noarch
 
-# These two are just the oldest version tested
-Requires: pygtk2 >= 1.99.12-6
+Requires: pygobject3
+Requires: gtk3
+Requires: cairo-gobject
+Requires: libvirt-glib
 Requires: gnome-python2-gconf >= 1.99.11-7
 # This version not strictly required: virt-manager should work with older,
 # however varying amounts of functionality will not be enabled.
@@ -101,9 +103,9 @@ Requires: vte >= 0.12.2
 # For online help
 Requires: scrollkeeper
 # For console widget
-Requires: gtk-vnc-python >= 0.3.8
+Requires: gtk-vnc2
 %if %{with_spice}
-Requires: spice-gtk-python
+Requires: spice-gtk3
 %endif
 %if %{with_guestfs}
 Requires: python-libguestfs
