Prep for release 0.9.2

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -33,6 +33,7 @@ src/virtManager/mediadev.py
 src/virtManager/migrate.py
 src/virtManager/netdev.py
 src/virtManager/network.py
+src/virtManager/packageutils.py
 src/virtManager/preferences.py
 src/virtManager/remote.py
 src/virtManager/secret.py
