--- a/virt-manager.spec.in
+++ b/virt-manager.spec.in
@@ -291,6 +291,14 @@ update-desktop-database -q %{_datadir}/applications
 %endif
 
 %changelog
+* Mon Jul 09 2012 Cole Robinson <crobinso@redhat.com> - 0.9.2-1
+- virt-manager release 0.9.2
+- Convert to gtkbuilder: UI can now be editted with modern glade tool
+- virt-manager no longer runs on RHEL5, but can manage a remote RHEL5
+  host
+- Option to configure spapr net and disk devices for pseries (Li Zhang)
+- Many bug fixes and improvements
+
 * Tue Jan 31 2012 Cole Robinson <crobinso@redhat.com> - 0.9.1-1
 - Support for adding usb redirection devices (Marc-André Lureau)
 - Option to switch usb controller to support usb2.0 (Marc-André Lureau)
