Make autogen.sh give me a usable dist on F17
There's a decent amount of resulting fallout...

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,14 @@
 /po/POTFILES
 /po/.*
 /po/stamp-it
+/po/Rules-quot
+/po/boldquot.sed
+/po/en@boldquot.header
+/po/en@quot.header
+/po/insert-header.sin
+/po/quot.sed
+/po/remove-potcdate.sin
+/po/Makevars.template
 
 Makefile
 Makefile.in*
@@ -21,6 +29,7 @@ Makefile.in*
 /config.rpath
 /config.sub
 /missing
+/mkinstalldirs
 /ltmain.sh
 /intltool-merge.in
 /intltool-extract.in
