Prep for release 0.9.3

--- a/virt-manager.spec.in
+++ b/virt-manager.spec.in
@@ -289,6 +289,10 @@ update-desktop-database -q %{_datadir}/applications
 %endif
 
 %changelog
+* Mon Jul 09 2012 Cole Robinson <crobinso@redhat.com> - 0.9.3-1
+- virt-manager release 0.9.3
+- Fix broken release tar.gz of version 0.9.2
+
 * Mon Jul 09 2012 Cole Robinson <crobinso@redhat.com> - 0.9.2-1
 - virt-manager release 0.9.2
 - Convert to gtkbuilder: UI can now be editted with modern glade tool
