Prep for release 0.9.4

--- a/virt-manager.spec.in
+++ b/virt-manager.spec.in
@@ -289,6 +289,10 @@ update-desktop-database -q %{_datadir}/applications
 %endif
 
 %changelog
+* Sun Jul 29 2012 Cole Robinson <crobinso@redhat.com> - 0.9.4-1
+- virt-manager release 0.9.4
+- Fix VNC keygrab issues
+
 * Mon Jul 09 2012 Cole Robinson <crobinso@redhat.com> - 0.9.3-1
 - virt-manager release 0.9.3
 - Fix broken release tar.gz of version 0.9.2
