virt-manager: Fix KVM_PACKAGES substitution variable
Hello,

Commit 68e78244e851f1f3829f711249d1f375103a2a4d changed the HV_PACKAGES
variable to KVM_PACKAGES in src/virt-manager.py.in, but the
corresponding change was never made to src/Makefile.am.

Here is a patch to correct the issue.

Thanks,

Marc.

commit 93ba787355736733c189e6809b9108a70f0e02d4
Author: Marc Deslauriers <marc.deslauriers@ubuntu.com>
Date:   Wed Aug 22 13:21:48 2012 -0400

    Fix incorrect substitution variable

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -65,7 +65,7 @@ endif
 	  -e "s,::DEFAULT_QEMU_USER::,$(DEFAULT_QEMU_USER)," \
 	  -e "s,::ENABLE_UNSUPPORTED_RHEL_OPTS::,$(ENABLE_UNSUPPORTED_RHEL_OPTS)," \
 	  -e "s|::PREFERRED_DISTROS::|$(PREFERRED_DISTROS)|" \
-	  -e "s|::HV_PACKAGES::|$(KVM_PACKAGES)|" \
+	  -e "s|::KVM_PACKAGES::|$(KVM_PACKAGES)|" \
 	  -e "s|::ASKPASS_PACKAGE::|$(ASKPASS_PACKAGE)|" \
 	  -e "s|::LIBVIRT_PACKAGES::|$(LIBVIRT_PACKAGES)|" \
 	  < $< > $@
