--- a/src/virt-manager.py.in
+++ b/src/virt-manager.py.in
@@ -117,6 +117,10 @@ def parse_commandline():
     optParser.add_option("--profile", dest="profile",
         help=optparse.SUPPRESS_HELP, metavar="FILE")
 
+    # Trace every libvirt API call to debug output
+    optParser.add_option("--trace-libvirt", dest="tracelibvirt",
+        help=optparse.SUPPRESS_HELP, action="store_true")
+
     optParser.add_option("-c", "--connect", dest="uri",
         help="Connect to hypervisor at URI", metavar="URI")
     optParser.add_option("--debug", action="store_true", dest="debug",
@@ -300,6 +304,12 @@ def main():
     logging.debug("virtManager import: %s", str(virtManager))
 
     cli.check_virtinst_version(virtinst_str)
+
+    if options.tracelibvirt:
+        logging.debug("Libvirt tracing requested")
+        import virtManager.module_trace
+        import libvirt
+        libvirt = virtManager.module_trace.wrap_module(libvirt)
 
     # Add our icon dir to icon theme
     icon_theme = gtk.icon_theme_get_default()
