Stop tracking old help files, they are long dead

--- a/Makefile.am
+++ b/Makefile.am
@@ -2,7 +2,7 @@ ACLOCAL_AMFLAGS = -I m4/
 
 SUBDIRS = src icons man po tests
 
-EXTRA_DIST = @PACKAGE@.spec HACKING COPYING-DOCS xmldocs.make omf.make \
+EXTRA_DIST = @PACKAGE@.spec HACKING \
 	intltool-extract.in intltool-merge.in intltool-update.in
 
 DISTCLEAN_FILES = @PACKAGE@.spec intltool-extract intltool-merge intltool-update
