--- a/configure.ac
+++ b/configure.ac
@@ -5,7 +5,8 @@ VIRTINST_VERSION="0.600.4"
 
 AC_CONFIG_SRCDIR(src/virt-manager.py.in)
 dnl Make automake keep quiet about wildcards & other GNUmake-isms
-AM_INIT_AUTOMAKE([foreign -Wno-portability])
+AC_CONFIG_AUX_DIR([build-aux])
+AM_INIT_AUTOMAKE([foreign])
 AM_MAINTAINER_MODE([enable])
 
 ALL_LINGUAS="as bg bn_IN bs ca cs da de es fi fr gu hi hr hu is it ja kn ko ml mr ms nb nl or pa pl pt_BR pt ro ru sr@latin sr sv ta te tr uk zh_CN zh_TW"
@@ -17,22 +18,6 @@ GETTEXT_PACKAGE=virt-manager
 AC_SUBST(GETTEXT_PACKAGE)
 AC_DEFINE_UNQUOTED([GETTEXT_PACKAGE],"$GETTEXT_PACKAGE",
                    [GETTEXT package name])
-
-dnl ====================================
-dnl = Begin tests for scrollkeeper
-dnl ====================================
-# Help is so outdated, don't even distribute it
-#help/Makefile
-#help/virt-manager/Makefile
-#help/virt-manager/C/Makefile
-#AC_PATH_PROG(SCROLLKEEPER_CONFIG, scrollkeeper-config,no)
-#if test x$SCROLLKEEPER_CONFIG = xno; then
-#  AC_MSG_ERROR(Couldn't find scrollkeeper-config. Please install the scrollkeeper package: http://scrollkeeper.sourceforge.net)
-#fi
-dnl ====================================
-dnl = End tests for scrollkeeper
-dnl ====================================
-
 
 dnl ---------------
 dnl Option handling
