--- a/src/virt-manager.py.in
+++ b/src/virt-manager.py.in
@@ -121,6 +121,11 @@ def parse_commandline():
     optParser.add_option("--trace-libvirt", dest="tracelibvirt",
         help=optparse.SUPPRESS_HELP, action="store_true")
 
+    # Don't load any connections on startup to test first run
+    # PackageKit integration
+    optParser.add_option("--test-first-run", dest="testfirstrun",
+        help=optparse.SUPPRESS_HELP, action="store_true")
+
     optParser.add_option("-c", "--connect", dest="uri",
         help="Connect to hypervisor at URI", metavar="URI")
     optParser.add_option("--debug", action="store_true", dest="debug",
@@ -328,7 +333,8 @@ def main():
     # display access
     import virtManager.config
     import virtManager.util
-    config = virtManager.config.vmmConfig(appname, appversion, ui_dir)
+    config = virtManager.config.vmmConfig(appname, appversion, ui_dir,
+                                          options.test_first_run)
     virtManager.util.running_config = config
     config.default_qemu_user = default_qemu_user
     config.rhel6_defaults = rhel_enable_unsupported_opts
