Make deleting storage files default with added prompt
This patch changes the default checkbox-state of "Delete all
associated storage" to be checked, but adds a prompt with a warning
for users to be sure they notice this change and they know what they
are doing (hopefully).

(crobinso: confirm even if no gconf schema available, cosmetic spacing
 fixup, add Martin to AUTHORS)

--- a/src/virt-manager.schemas.in
+++ b/src/virt-manager.schemas.in
@@ -378,6 +378,19 @@
     </schema>
 
     <schema>
+      <key>/schemas/apps/::PACKAGE::/confirm/delete_storage</key>
+      <applyto>/apps/::PACKAGE::/confirm/delete_storage</applyto>
+      <owner>::PACKAGE::</owner>
+      <type>bool</type>
+      <default>1</default>
+
+      <locale name="C">
+        <short>Confirm deleting storage</short>
+        <long>Whether we require a confirmation on deleting storage</long>
+      </locale>
+    </schema>
+
+    <schema>
       <key>/schemas/apps/::PACKAGE::/manager_window_height</key>
       <applyto>/apps/::PACKAGE::/manager_window_height</applyto>
       <owner>::PACKAGE::</owner>
