spec: Add explicit pod2man dep

--- a/virt-manager.spec.in
+++ b/virt-manager.spec.in
@@ -120,6 +120,7 @@ BuildRequires: gettext
 BuildRequires: scrollkeeper
 BuildRequires: intltool
 BuildRequires: GConf2
+BuildRequires: /usr/bin/pod2man
 
 Requires(pre): GConf2
 Requires(post): GConf2
