Make RPM build work
And wire up man page creation

--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,14 @@
 *.pyc
 *.gmo
 
-
+/.coverage
 /MANIFEST
-/virt-manager
-/virt-manager-tui
 
 /man/virt-manager.1
+/man/virt-install.1
+/man/virt-clone.1
+/man/virt-image.1
+/man/virt-convert.1
+/man/virt-image.5
 
 /virtcli/cli.cfg
