man: Fix type it's->its (bz 929437)

--- a/man/virt-install.pod.in
+++ b/man/virt-install.pod.in
@@ -347,7 +347,7 @@ option kernel arguments, and enabling a BIOS boot menu (requires libvirt
 0.8.3 or later)
 
 --boot can be specified in addition to other install options
-(such as --location, --cdrom, etc.) or can be specified on it's own. In
+(such as --location, --cdrom, etc.) or can be specified on its own. In
 the latter case, behavior is similar to the --import install option: there
 is no 'install' phase, the guest is just created and launched as specified.
 
