--- a/tests/pylint.cfg
+++ b/tests/pylint.cfg
@@ -12,7 +12,7 @@ profile=no
 
 # Add files or directories to the blacklist. They should be base names, not
 # paths.
-ignore=scriptimports
+#ignore=
 
 # Pickle collected data for later comparisons.
 persistent=yes
