update spec file to use its version at runtime
This is a "sanity" patch so that the version on the rpm
and the version at runtime are the same.

This patch depends on the patch which processes the spec.in
file into the spec file, the patch which adds pkgversion to
configure, and the snapshot patch.
.
Signed-off-by: Gene Czarcinski <gene@czarc.net>

--- a/virt-manager.spec.in
+++ b/virt-manager.spec.in
@@ -182,6 +182,7 @@ An interactive text user interface for Virtual Machine Manager.
 
 
 python setup.py configure \
+    --pkgversion="%{version}" \
     %{?_tui_opt} \
     %{?_qemu_user} \
     %{?_kvm_packages} \
