requires libvirt-glib >= 0.0.9 for LibvirtGLib(None) work

--- a/virt-manager.spec.in
+++ b/virt-manager.spec.in
@@ -45,7 +45,7 @@ BuildArch: noarch
 
 Requires: pygobject3
 Requires: gtk3
-Requires: libvirt-glib
+Requires: libvirt-glib >= 0.0.9
 Requires: gnome-python2-gconf
 Requires: libxml2-python
 Requires: vte
