--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,5 @@
 # to be included/excluded from the tarball produced by sdist
-include AUTHORS COPYING HACKING INSTALL NEWS README
+include COPYING HACKING INSTALL NEWS README
 include autobuild.sh
 include MANIFEST.in
 include setup.py
