spec: Fix dep on vte (bz 958945)

--- a/virt-manager.spec.in
+++ b/virt-manager.spec.in
@@ -47,7 +47,7 @@ Requires: gtk3
 Requires: libvirt-glib >= 0.0.9
 Requires: gnome-python2-gconf
 Requires: libxml2-python
-Requires: vte
+Requires: vte3
 
 # For console widget
 Requires: gtk-vnc2
